load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "imgui",
    srcs = glob([
        "*.cpp",
    ]) + ["backends/imgui_impl_glfw.cpp"],
    hdrs = glob([
        "*.h",
    ]) + ["backends/imgui_impl_glfw.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = ["@glfw"],
)
